--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "",
   "main": "src/index.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "browser": "./src/browser.js",
+      "import": "./src/index.js",
+      "default": "./src/index.js"
+    },
+    "./browser": "./src/browser.js",
+    "./node": "./src/node.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
